#VESRION 0.8.1#

 - deprecated views/functions/ folder and files, moved general.php functions to new view helper html.php

 - added method getExtension() to Peak_Spl_FileInfo

 - added class Peak_Spl_Dirinfo
  
 - deprecated Peak_Core_Extension_Codegen in favor of new Peak_Codegen abstract class 

 - added another syntax support for regex route in Peak_Router.
   Standard syntax : addRegex([my regex], array('controller' => 'cltrname', 'action' => 'actionname'));
   New other way: addRegex([my regex], 'cltrname.actionname');

 - Controllers actions prefix name are now managed by Peak_Controller_Action only. It make thing cleaner outside of controllers.
   This change has been fixed in Peak_Controller_Front, Peak_Router.
   We can also customize action prefix name in controllers even if it's not recommended for consistency reasons.

 - added function _autoloadClass2File() to autoload.php

 - fix methods isModule() and isController() from Peak_Core and removed the deprecated method getControllers()

 - application custom classes name prefix changed in autoload.php. 
   Old class name prefix : Application_..., New class name prefix : App_... 

 - fix a potential security threat in Peak_Exception constants messages.

 - fix a problem of uniformisation of $_SERVER['REQUEST_URI'] and $request_uri variables in Peak_Router::getRequestURI(). 

 - fix a problem with regex in Peak_Application_Modules. With this fix, modules can specifing theirs own regex.

 - added method deleteRegex() in Peak_Router.

 - renamed $_module_name and $_module_path, added methods getPath() and isInternal() in Peak_Application_Modules.

 - Peak_Application_Modules instance is now stored in Peak_Application::$module.

 - added method getName() to Peak_Application_Modules.

 - added classes Peak_Config_Ini and Peak_Config_Json.

 - visibility of $_vars from Peak_Config has been changed to protected to have the ability of extending the class.


#VERSION 0.8.0#
