@@ -6,7 +6,7 @@
  * @authors  Francois Lajoie
  * @version  $Id$
  */
-class View_Helper_Country 
+class Peak_View_Helper_Country 
 {
 	
 	public $list = array(
