@@ -5,7 +5,7 @@
  * @author  Francois Lajoie
  * @version $Id$
  */
-class View_Helper_Html
+class Peak_View_Helper_Html
 {
 	
 	/**
